--- a/css/first.css
+++ b/css/first.css
@@ -344,7 +344,50 @@ body{
         padding: 10px;
         margin-left: 10px;
         border: 1px solid black;
-        border-radius: 10px;
+        border-radius: 10px;    
+    }
+                     /*NEW CODE*/
+    .info1 .sub-menu .in{
+        display: flex;
+        border: 0.2px solid black;
+        margin-top: 5px;
+        padding: 2px;
+    }
+    .info1 .sub-menu .in1 button{
+        margin-left: 5px;
+        margin-bottom: 5px;
+        cursor: pointer;
+        font-size: smaller;
+        width: fit-content;      
         
+    }
+    .info1 .sub-menu .in1 .fa fa-phone{
+        color: blue;
+        font-weight: bold;
+    }
+    .info1 .sub-menu .in2{
+        margin-top: 10px;
+        margin-right: 10px;
+        padding-left: 20%;
+        width: 80px;
+        font-size: 10px;
+    }
+    .info1 .sub-menu .in2 .im1{
+        width: 80px;
+        height: 60px; 
+    }
+    .info1 .sub-menu .in3{
+        padding: 2px;
+        display: flex;
+        border: 0.1px solid black;
+        margin-top: 2px;
+    }
+    .info1 .sub-menu .h11{
+        text-align: center;
+        font-weight: bold;
+        font-size: x-large;
+    }
+    .info1 .sub-menu .f1{
+        text-align: center;
     }
 }
